style: add styles components

--- a/src/styles/components/atoms/button.module.scss
+++ b/src/styles/components/atoms/button.module.scss
@@ -9,6 +9,10 @@
     background-color: $primary;
   }
 
+  &--secondary {
+    background-color: $secondary;
+  }
+
   &:active {
     transform: scale(1.1);
   }
