--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,22 +1,14 @@
 // Breakpoints
-$s-small: 320px;
-$x-small: 360px;
+
 $small: 480px;
-$s-medium: 570px;
 $medium: 768px;
 $large: 960px;
-$x-large: 1060px;
-$xx-medium: 1200px;
-$xx-large: 1250px;
-$xxx-large: 1440px;
-$xxxx-large: 1600px;
 $high-quality: 1700px;
-$x-high-quality: 1920px;
-$xx-high-quality: 2560px;
 
 //COLORS
 $white: #fff;
-$primary: rgb(36, 74, 201);
+$primary: #fefcfc;
+$secondary: #268fe3;
 
 //Z-index
 $z-back: -1;
