--- a/src/styles/components/organisms/transaction.module.scss
+++ b/src/styles/components/organisms/transaction.module.scss
@@ -52,6 +52,11 @@
     text-align: center;
   }
 
+  &__note {
+    margin: 1rem 0;
+    text-align: center;
+  }
+
   &--negative {
     color: red;
   }
