--- a/src/styles/components/organisms/home.module.scss
+++ b/src/styles/components/organisms/home.module.scss
@@ -2,15 +2,30 @@
 @import '@/styles/variables.scss';
 
 .o-home {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(160px, 1fr));
-  gap: 1rem;
   width: 100%;
-  padding: 0 1rem;
 
-  @include fromY($large) {
-    max-width: 1200px;
-    margin: auto;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  &__container {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(160px, 1fr));
+    gap: 1rem;
+    width: 100%;
+    padding: 0 1rem;
+
+    @include fromY($large) {
+      max-width: 1200px;
+      margin: auto;
+      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    }
+  }
+
+  &__title {
+    font-size: 1.2rem;
+    text-align: center;
+    margin: 1rem 0;
+    font-weight: 600;
+
+    @include fromY($large) {
+      font-size: 1.5rem;
+    }
   }
 }
