--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -8,7 +8,8 @@ $high-quality: 1700px;
 //COLORS
 $white: #fff;
 $primary: #fefcfc;
-$secondary: #268fe3;
+$secondary: #472fa2;
+$gray: #6a7a88;
 
 //Z-index
 $z-back: -1;
