--- a/src/styles/components/atoms/input.module.scss
+++ b/src/styles/components/atoms/input.module.scss
@@ -19,8 +19,7 @@
     }
 
     &:focus {
-      box-shadow: 0 0 5px $primary;
-      border: 1px solid $primary;
+      border: 1px solid $secondary;
     }
   }
 
