feat: add loading card

--- a/src/styles/components/molecules/card.module.scss
+++ b/src/styles/components/molecules/card.module.scss
@@ -22,4 +22,10 @@
     font-weight: 500;
     color: #fff;
   }
+
+  &__loading {
+    position: absolute;
+    bottom: 5px;
+    color: #ddd;
+  }
 }
